# patina

./: .agent-mail-project-id  .agent-mail.yaml  .gitignore  .gitmodules  .ubsignore  AGENTS.md  AGENTS.md.backup  ARCHITECTURE_MAP.md  BENCHMARKS.md  CHANGELOG.md  CLAUDE.md  COMPAT_DASHBOARD.md  COMPAT_MATRIX.md  CONTRIBUTING.md  CRATE_BOUNDARIES.md  EXIT_CRITERIA.md  MILESTONES.md  PORT_SCOPE.md  README.md  RELEASING.md  REPIN_REPORT.md  RISK_REGISTER.md  TEST_ORACLE.md  THIRDPARTY_STRATEGY.md  package.json  pnpm-lock.yaml
apps/orchestrator/crate/: Cargo.toml
apps/orchestrator/crate/src/: br.rs  config.rs  coordinator.rs  db.rs  error.rs  gate_map.rs  launcher.rs  mail.rs  main.rs  message.rs  planner.rs  prd_parser.rs  project_config.rs  tmux.rs  verifier.rs  worker.rs
engine-rs/: Cargo.toml  EXAMPLES.md  INPUT_CONTRACT.md  Makefile  TESTING.md  THIRD_PARTY.md
engine-rs/crates/gdaudio/: AUDIO_MILESTONE.md  Cargo.toml
engine-rs/crates/gdaudio/src/: bus.rs  decode.rs  import.rs  lib.rs  mixer.rs  sample.rs  server.rs  spatial.rs  stream.rs  wav.rs
engine-rs/crates/gdcore/: Cargo.toml
engine-rs/crates/gdcore/src/: bench_regression.rs  ci_repin.rs  compare3d.rs  comparison_tooling.rs  crash_triage.rs  crypto.rs  dashboard.rs  debug_protocol.rs  debugger.rs  diagnostics.rs  error.rs  geometry2d.rs  id.rs  lib.rs  math.rs  math3d.rs  memory_profiler.rs  nightly_ci.rs  node_path.rs  perf_comparison.rs  project_settings.rs  property_testing.rs  regex.rs  release_notes.rs  release_train.rs  reproducible_build.rs  string_name.rs
engine-rs/crates/gdcore/tests/: benchmark_regression_gate_test.rs  property_based_math_test.proptest-regressions  property_based_math_test.rs  rustdoc_generation_test.rs
engine-rs/crates/gdeditor/: Cargo.toml  EDITOR_SETTINGS.md  SMOKE_CHECKLIST.md
engine-rs/crates/gdeditor/src/: animation_editor.rs  asset_drag_drop.rs  command_palette.rs  create_dialog.rs  curve_editor.rs  dock.rs  editor_compat.rs  editor_interface.rs  editor_menu.rs  editor_plugin.rs  editor_server.rs  editor_settings_dialog.rs  editor_ui.rs  environment_preview.rs  export_dialog.rs  filesystem.rs  find_replace.rs  group_dialog.rs  import.rs  import_settings.rs  inspector.rs  lib.rs  output_panel.rs  profiler_panel.rs  project_manager.rs  project_settings_dialog.rs  recent_items.rs  scene_editor.rs  scene_renderer.rs  script_completion.rs  script_editor.rs  script_gutter.rs  settings.rs  shader_editor.rs  signal_dialog.rs  texture_cache.rs  theme_editor.rs  tilemap_editor.rs  undo_redo.rs  vcs.rs  (+2 more)
engine-rs/crates/gdeditor/tests/: editor_beads_test.rs  editor_parity_test.rs  scene_tree_parity_test.rs
engine-rs/crates/gdobject/: Cargo.toml
engine-rs/crates/gdobject/src/: class_db.rs  lib.rs  notification.rs  object.rs  ref_counted.rs  signal.rs  weak_ref.rs
engine-rs/crates/gdphysics2d/: Cargo.toml
engine-rs/crates/gdphysics2d/src/: area2d.rs  body.rs  body3d.rs  character.rs  collision.rs  collision3d.rs  joint.rs  lib.rs  shape.rs  shape3d.rs  test_harness.rs  tilemap_collision.rs  world.rs  world3d.rs
engine-rs/crates/gdphysics3d/: Cargo.toml
engine-rs/crates/gdphysics3d/src/: area3d.rs  body.rs  character.rs  collision.rs  joint.rs  lib.rs  query.rs  shape.rs  world.rs
engine-rs/crates/gdplatform/: Cargo.toml  INPUT_CONTRACT.md  PLATFORM_ROADMAP.md
engine-rs/crates/gdplatform/src/: android.rs  backend.rs  ci_artifact.rs  clipboard.rs  cursor.rs  display.rs  drag_drop.rs  export.rs  http_request.rs  input.rs  ios.rs  lib.rs  linux.rs  macos.rs  native_menu.rs  network.rs  os.rs  platform_targets.rs  signing.rs  thread.rs  web.rs  (+4 more)
engine-rs/crates/gdrender2d/: Cargo.toml
engine-rs/crates/gdrender3d/: Cargo.toml
engine-rs/crates/gdresource/: Cargo.toml
engine-rs/crates/gdscene/: Cargo.toml
engine-rs/crates/gdscript-interop/: Cargo.toml
engine-rs/crates/gdserver2d/: Cargo.toml
engine-rs/crates/gdserver3d/: Cargo.toml
engine-rs/crates/gdvariant/: Cargo.toml
engine-rs/crates/patina-runner/: Cargo.toml
engine-rs/examples/: FIXTURE_MAP.md  README.md  benchmarks.rs  demo_2d.rs  editor.rs  hello_gdscript.rs  platformer_demo.rs  run_project.rs  space_shooter.rs  space_shooter_live.rs
engine-rs/fixtures/scenes/: demo_2d.tscn  hierarchy.tscn  platformer.tscn  render_test_camera.tscn  render_test_simple.tscn  render_test_sprite.tscn  signals_complex.tscn  space_shooter.tscn  tilemap_demo.tscn  ui_menu.tscn
engine-rs/fixtures/scripts/: enemy_spawner.gd  player.gd  test_variables.gd
engine-rs/output/: demo_frame.ppm  platformer_frame.ppm  space_shooter_frame.ppm
engine-rs/src/: lib.rs
engine-rs/tests/: animation_blending_preview_test.rs  animation_editor_parity_test.rs  animation_player_3d_skeletal_test.rs  animation_timeline_keyframe_editing_test.rs  animation_track_creation_test.rs  animation_track_creation_typed_test.rs  api_extraction_automation_test.rs  area2d_overlap_signal_parity_test.rs  asset_drag_drop_viewport_inspector_test.rs  audio_deterministic_harness_test.rs  audio_import_pipeline_test.rs  audio_nav_ui_fixture_scene_test.rs  audio_runtime_broad_test.rs  audio_smoke_test.rs  bench_render_baselines.rs  bench_render_fixtures_report_test.rs  bench_runtime_baselines.rs  benchmark_dashboard_audit_test.rs  benchmark_dashboard_test.rs  broader_integration_audio_nav_ui_test.rs  broader_integration_fixtures_test.rs  broader_integration_workflow_test.rs  cache_regression_test.rs  camera2d_transform_render_test.rs  camera3d_light_registration_parity_test.rs  camera_viewport_composition_parity_test.rs  camera_viewport_extended_parity_test.rs  camera_viewport_render_parity_extended_test.rs  change_scene_api_parity_test.rs  change_scene_to_node_oracle_parity_test.rs  change_scene_to_packed_parity_test.rs  change_scene_validation_parity_test.rs  character_static_body_behavior_test.rs  character_static_body_extended_parity_test.rs  characterbody3d_move_and_slide_3d_test.rs  characterbody3d_move_and_slide_test.rs  ci_3d_crate_boundary_audit_test.rs  ci_build_matrix_platform_test.rs  ci_domain_coverage_validation_test.rs  ci_render_golden_gate_test.rs  (+369 more)
(+673 files in other folders)
