[workspace]
resolver = "2"
members = [
    "crates/gdcore",
    "crates/gdvariant",
    "crates/gdobject",
    "crates/gdresource",
    "crates/gdscene",
    "crates/gdserver2d",
    "crates/gdrender2d",
    "crates/gdphysics2d",
    "crates/gdaudio",
    "crates/gdplatform",
    "crates/gdscript-interop",
    "crates/gdeditor",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/jonathanhawkins/patina"

[workspace.dependencies]
thiserror = "2"
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
