[workspace]
resolver = "2"
members = [
    "crates/gdcore",
    "crates/gdvariant",
    "crates/gdobject",
    "crates/gdresource",
    "crates/gdscene",
    "crates/gdserver2d",
    "crates/gdrender2d",
    "crates/gdphysics2d",
    "crates/gdaudio",
    "crates/gdplatform",
    "crates/gdscript-interop",
    "crates/gdphysics3d",
    "crates/gdserver3d",
    "crates/gdrender3d",
    "crates/gdeditor",
    "crates/patina-runner",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/jonathanhawkins/patina"

[workspace.dependencies]
thiserror = "2"
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Root package for examples and integration tests.
[package]
name = "patina-engine"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
gdcore = { path = "crates/gdcore" }
gdvariant = { path = "crates/gdvariant" }
gdscene = { path = "crates/gdscene" }
gdserver2d = { path = "crates/gdserver2d" }
gdrender2d = { path = "crates/gdrender2d" }
gdphysics2d = { path = "crates/gdphysics2d" }
gdplatform = { path = "crates/gdplatform" }
gdaudio = { path = "crates/gdaudio" }
gdobject = { path = "crates/gdobject" }
gdresource = { path = "crates/gdresource" }
gdscript-interop = { path = "crates/gdscript-interop" }
gdphysics3d = { path = "crates/gdphysics3d" }
gdserver3d = { path = "crates/gdserver3d" }
gdrender3d = { path = "crates/gdrender3d" }
gdeditor = { path = "crates/gdeditor" }
patina-runner = { path = "crates/patina-runner" }
serde_json.workspace = true

[[example]]
name = "demo_2d"
path = "examples/demo_2d.rs"

[[example]]
name = "benchmarks"
path = "examples/benchmarks.rs"

[[example]]
name = "platformer_demo"
path = "examples/platformer_demo.rs"

[[example]]
name = "hello_gdscript"
path = "examples/hello_gdscript.rs"

[[example]]
name = "space_shooter"
path = "examples/space_shooter.rs"

[[example]]
name = "space_shooter_live"
path = "examples/space_shooter_live.rs"

[dev-dependencies]
tempfile = "3"
serde_json.workspace = true
proptest = "1"

[[example]]
name = "editor"
path = "examples/editor.rs"
