[package]
name = "patina-orchestrator"
version = "0.1.0"
edition = "2021"
description = "Swarm coordinator for Patina multi-agent development"

[[bin]]
name = "patina-orchestrator"
path = "src/main.rs"

[dependencies]
rusqlite = { version = "0.31", features = ["bundled"] }
regex = "1"
ureq = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
chrono = "0.4"
tracing-subscriber = "0.3"
rustix = { version = "0.38", features = ["fs"] }
toml = "0.8"

[dev-dependencies]
proptest = "1.4"
tempfile = "3"
