[package]
name = "gdeditor"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
gdcore = { path = "../gdcore" }
gdvariant = { path = "../gdvariant" }
gdobject = { path = "../gdobject" }
gdscene = { path = "../gdscene" }
gdrender2d = { path = "../gdrender2d" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = "2"
tracing = "0.1"

[dev-dependencies]
tempfile = "3"
