[package]
name = "gdplatform"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
windowed = ["winit", "softbuffer", "gdrender2d"]

[dependencies]
gdcore = { path = "../gdcore" }
gdvariant = { path = "../gdvariant" }
gdrender2d = { path = "../gdrender2d", optional = true }
thiserror.workspace = true
winit = { version = "0.30", optional = true }
softbuffer = { version = "0.4", optional = true }
