[package]
name = "gdscene"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
gdcore = { path = "../gdcore" }
gdvariant = { path = "../gdvariant" }
gdobject = { path = "../gdobject" }
gdresource = { path = "../gdresource" }
gdscript-interop = { path = "../gdscript-interop" }
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
serde_json.workspace = true
