[package]
name = "gdscene"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
gdcore = { path = "../gdcore" }
gdvariant = { path = "../gdvariant" }
gdobject = { path = "../gdobject" }
gdresource = { path = "../gdresource" }
gdscript-interop = { path = "../gdscript-interop" }
gdphysics2d = { path = "../gdphysics2d" }
gdplatform = { path = "../gdplatform" }
thiserror.workspace = true
tracing.workspace = true
serde_json.workspace = true

