[package]
name = "gdscript-interop"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
gdcore = { path = "../gdcore" }
gdvariant = { path = "../gdvariant" }
gdobject = { path = "../gdobject" }
thiserror.workspace = true
tracing.workspace = true
